# bottlerocket-compose

./: .gitignore  BUILDING_AWS_COMPOSE.md  Cargo.toml  Makefile.toml  README.md  Release.toml  SETTINGS.md  Twoliter.toml
examples/compose-bootstrap-containers/nginx/: Dockerfile  main.ab  main.sh
examples/compose-bootstrap-containers/nginx/nginx/: compose.yml
opentofu/: flake.nix
opentofu/envs/: aws_s3_administrator.tfvars.template  aws_s3_bottlerocket_image_developer.tfvars.template
opentofu/envs/ec2/amazon-linux/: dependencies.tf  main.tf  user_data.sh  versions.tf
opentofu/envs/ec2/bottlerocket/: .terraform.lock.hcl  dependencies.tf  main.tf  user_data.toml  versions.tf
opentofu/envs/ecr/: .terraform.lock.hcl  main.tf  variables-remote_state.tf  versions.tf
opentofu/envs/iam/: dependencies.tf  main.tf  outputs.tf  versions.tf
opentofu/envs/vpc/: .terraform.lock.hcl  dependencies.tf  main.tf  outputs.tf  versions.tf
sources/: Cargo.toml  deny.toml
sources/compose-containers/: Cargo.toml
sources/compose-containers/src/: config.rs  main.rs
sources/settings-defaults/aws-compose/: Cargo.toml
sources/settings-defaults/aws-compose/defaults.d/: 50-compose-containers.toml
sources/settings-defaults/aws-dev/defaults.d/: 21-aws-bootstrap-container.toml
sources/settings-defaults/metal-dev/defaults.d/: 10-defaults.toml
sources/settings-extensions/compose-containers/: Cargo.toml
sources/settings-extensions/compose-containers/src/: lib.rs  main.rs
sources/settings-plugins/aws-compose/: Cargo.toml
sources/settings-plugins/aws-compose/src/: lib.rs
sources/settings-plugins/aws-dev/src/: lib.rs
sources/settings-plugins/metal-dev/src/: lib.rs
sources/shared-defaults/: aws-bootstrap-container.toml  aws-host-containers.toml  defaults-without-updates.toml  image-verification.toml  kubernetes-aws-credential-provider.toml  kubernetes-aws-graceful-shutdown.toml  kubernetes-containerd-nvidia.toml  kubernetes-containerd.toml  kubernetes-seccomp-default-true.toml  kubernetes-services.toml  nvidia-k8s-device-plugin-cdi.toml  nvidia-k8s-device-plugin-legacy.toml  nvidia-k8s-device-plugin.toml  oci-hooks.toml  public-bootstrap-containers.toml  public-host-containers.toml
variants/aws-compose/: Cargo.toml
variants/aws-dev/: Cargo.toml
variants/metal-dev/: Cargo.toml
