[workspace]
resolver = "1"
members = [
    "compose-containers",
    
    "settings-defaults/aws-compose",
    "settings-defaults/aws-dev",
    "settings-defaults/metal-dev",

    "settings-extensions/compose-containers",

    "settings-plugins/aws-compose",
    "settings-plugins/aws-dev",
    "settings-plugins/metal-dev",
]

[workspace.dependencies]
abi_stable = "0.11.3"
env_logger = "0.11"
log = "0.4.21"
serde = "1"
serde_json = "1"
simplelog = "0.12"
snafu = "0.8"
tempfile = "3"
toml = "0.8"

[workspace.dependencies.bottlerocket-defaults-helper]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.15.0"
version = "0.1.1"

[workspace.dependencies.bottlerocket-modeled-types]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.15.0"
version = "0.11.0"

[workspace.dependencies.bottlerocket-settings-models]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.15.0"
version = "0.15.0"

[workspace.dependencies.bottlerocket-settings-plugin]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.15.0"
version = "0.1.0"

[workspace.dependencies.bottlerocket-model-derive]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.15.0"
version = "0.1.0"

[workspace.dependencies.bottlerocket-settings-sdk]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.15.0"
version = "0.1.0"

[profile.release]
debug = true
