[package]
name = "compose-containers"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2024"

[dependencies]
bottlerocket-modeled-types.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
simplelog.workspace = true
snafu.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
