[package]
name = "aws-compose"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[package.metadata.build-variant.image-features]
in-place-updates = false
grub-set-private-var = true
xfs-data-partition = true
uefi-secure-boot = true
systemd-networkd = true
erofs-root-partition = true
external-kmod-development = false
encrypted-storage = true

[package.metadata.build-variant]
kernel-parameters = [
    "console=tty0",
    "console=ttyS0,115200n8",
    # Only reserve if there are at least 2GB
    "crashkernel=2G-:256M",
    "net.ifnames=0",
    "netdog.default-interface=eth0:dhcp4,dhcp6?",
    "quiet",
]
included-packages = [
# core
    "release",
    "kernel-6.12",
    "containerd-2.1",
    "systemd-257",
    "nftables",
    "whippet",
# docker
    "docker-cli-29",
    "docker-engine-29",
    "docker-init",
# compose-containers
    "compose-containers",
    "docker-compose",
]

[lib]
path = "../variants.rs"

[build-dependencies]
# core
settings-defaults = { path = "../../packages/settings-defaults" }
settings-plugins = { path = "../../packages/settings-plugins" }
# compose-containers
compose-containers = { path = "../../packages/compose-containers" }
docker-compose = { path = "../../packages/docker-compose" }
