[package]
name = "settings-plugin-aws-compose"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "settings_aws_compose"

[dependencies]
abi_stable.workspace = true
serde.workspace = true
serde_json.workspace = true

# settings plugins
bottlerocket-settings-models.workspace = true
bottlerocket-settings-plugin.workspace = true

# local settings extensions
settings-extension-compose-containers = { version = "0.1.0", path = "../../settings-extensions/compose-containers" }
